# ai-usage-tracker

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
.github/workflows/: build-smoke.yml  ci.yml  release.yml
docs/: 2026-06-20-investigation-consolidated.md  oauth-credential-research.md  release-runtime-e2e.md
docs/audit/: 2026-06-22-deep-audit.md
scripts/: tauri.mjs  tauriCommand.d.mts  tauriCommand.mjs
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  popover.json
src-tauri/examples/: live_check.rs  probe_cli_login.rs
src-tauri/src/: anchor.rs  cli_login.rs  commands.rs  config.rs  http.rs  jwt.rs  keychain.rs  lib.rs  login.rs  main.rs  model.rs  notify.rs  oauth.rs  oauth_login.rs  scheduler.rs  secrets.rs  store.rs  update.rs  util.rs
src-tauri/src/anchor/: cooldown.rs  mod.rs  resolve.rs
src-tauri/src/anchor/send/: codex.rs  mod.rs  zai.rs
src-tauri/src/auth/: cancel_token.rs  finish.rs  mod.rs
src-tauri/src/commands/: mod.rs  refresh.rs  snapshot_merge.rs  state.rs
src-tauri/src/oauth/: callback_server.rs  credential.rs  exchange.rs  html.rs  mod.rs  pkce.rs  spec.rs
src-tauri/src/providers/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  zai.rs
src-tauri/src/providers/claude/: keychain_write.rs  mod.rs  web.rs
src-tauri/src/providers/codex/: creds.rs  mod.rs  parse.rs  refresh.rs
src-tauri/src/providers/copilot/: creds.rs  mod.rs  parse.rs
src-tauri/src/providers/cursor/: creds.rs  mod.rs  parse.rs
src-tauri/src/providers/gemini/: mod.rs  parse.rs  refresh.rs
src-tauri/src/providers/zai/: mod.rs  parse.rs
src-tauri/tests/: claude_fixture.json  claude_web_orgs.json  codex_auth_fixture.json  codex_usage_fixture.json  codex_wham_fixture.json  config_v0_provider_level.json  copilot_billing_fixture.json  copilot_internal_fixture.json  cursor_usage_fixture.json  gemini_oauth_fixture.json  gemini_quota_fixture.json  zai_quota_fixture.json
src/components/: ActionFeedbackOverlay.tsx  AddAccountDialog.test.tsx  AddAccountDialog.tsx  BarGauge.tsx  Dashboard.tsx  EmptyState.tsx  ErrorState.tsx  FleetBar.tsx  Gauge.tsx  Header.tsx  PopoverDashboard.tsx  PopoverShell.tsx  ProviderCard.tsx  ProviderDetail.tsx  ProviderGrid.tsx  ProviderMark.tsx  RingGauge.tsx  ServiceCard.tsx  ServiceDetail.tsx  SettingsDialog.tsx  StatusDot.tsx  Toaster.tsx  TrayPopover.tsx  accessibilityLabels.test.ts  actionFeedbackLayout.test.ts  dashboardPersistence.test.ts  (+1 more)
src/hooks/: useNow.ts  (+9 more)
(+87 files in other folders)
