[package]
name = "ai-usage-tracker"
version = "0.1.0"
description = "Track real subscription usage for AI coding services"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_usage_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
dirs = "5"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
base64 = "0.22"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
