[package]
name = "ai-usage-tracker"
version = "0.1.0"
description = "Track real subscription usage for AI coding services"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_usage_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
dirs = "5"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
base64 = "0.22"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tiny_http = "0.12.0"
sha2 = "0.11.0"
rand = "0.10.1"
url = "2.5.8"
urlencoding = "2.1.3"
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[profile.release]
opt-level = "z"      # optimize for size (menu-bar utility, not CPU-bound)
lto = true           # link-time optimization
codegen-units = 1    # better optimization at the cost of compile time
strip = true         # strip symbols from the binary
# NOTE: deliberately NOT setting `panic = "abort"`. The app relies on
# unwinding so a panic in one provider fetch does not abort the whole
# process (preserves the per-provider isolation invariant in fetch_all).

[dev-dependencies]
wiremock = "0.6.5"
